--- a/Github users viewer/Storyboards/Base.lproj/Main.storyboard
+++ b/Github users viewer/Storyboards/Base.lproj/Main.storyboard
@@ -21,10 +21,28 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZaC-FN-CaW"/>
+                    <connections>
+                        <segue destination="WXw-Ac-qaD" kind="show" identifier="ShowUserDetail" id="CuZ-Ha-YIt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1038" y="-564"/>
+        </scene>
+        <!--List Of User Followers-->
+        <scene sceneID="EOw-fU-pX8">
+            <objects>
+                <viewController id="WXw-Ac-qaD" customClass="ListOfUserFollowers" customModule="Github_users_viewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J6B-CY-Y2d">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="0bm-7U-xS1"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Guo-cp-LaQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1910" y="-564"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MgA-4i-MYa">
